; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/extr_usb_device.c_usb_devinfo.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/extr_usb_device.c_usb_devinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_device = type { i32, %struct.usb_device_descriptor }
%struct.usb_device_descriptor = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [49 x i8] c"%s %s, class %d/%d, rev %x.%02x/%x.%02x, addr %d\00", align 1
@.str.1 = private unnamed_addr constant [36 x i8] c"%s %s, rev %x.%02x/%x.%02x, addr %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usb_devinfo(%struct.usb_device* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.usb_device*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.usb_device_descriptor*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.usb_device* %0, %struct.usb_device** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load %struct.usb_device*, %struct.usb_device** %4, align 8
  %11 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %10, i32 0, i32 1
  store %struct.usb_device_descriptor* %11, %struct.usb_device_descriptor** %7, align 8
  %12 = load %struct.usb_device_descriptor*, %struct.usb_device_descriptor** %7, align 8
  %13 = getelementptr inbounds %struct.usb_device_descriptor, %struct.usb_device_descriptor* %12, i32 0, i32 3
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @UGETW(i32 %14)
  store i32 %15, i32* %9, align 4
  %16 = load %struct.usb_device_descriptor*, %struct.usb_device_descriptor** %7, align 8
  %17 = getelementptr inbounds %struct.usb_device_descriptor, %struct.usb_device_descriptor* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @UGETW(i32 %18)
  store i32 %19, i32* %8, align 4
  %20 = load %struct.usb_device_descriptor*, %struct.usb_device_descriptor** %7, align 8
  %21 = getelementptr inbounds %struct.usb_device_descriptor, %struct.usb_device_descriptor* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = icmp ne i32 %22, 255
  br i1 %23, label %24, label %49

24:                                               ; preds = %3
  %25 = load i8*, i8** %5, align 8
  %26 = load i32, i32* %6, align 4
  %27 = load %struct.usb_device*, %struct.usb_device** %4, align 8
  %28 = call i8* @usb_get_manufacturer(%struct.usb_device* %27)
  %29 = load %struct.usb_device*, %struct.usb_device** %4, align 8
  %30 = call i8* @usb_get_product(%struct.usb_device* %29)
  %31 = load %struct.usb_device_descriptor*, %struct.usb_device_descriptor** %7, align 8
  %32 = getelementptr inbounds %struct.usb_device_descriptor, %struct.usb_device_descriptor* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.usb_device_descriptor*, %struct.usb_device_descriptor** %7, align 8
  %35 = getelementptr inbounds %struct.usb_device_descriptor, %struct.usb_device_descriptor* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* %9, align 4
  %38 = ashr i32 %37, 8
  %39 = load i32, i32* %9, align 4
  %40 = and i32 %39, 255
  %41 = load i32, i32* %8, align 4
  %42 = ashr i32 %41, 8
  %43 = load i32, i32* %8, align 4
  %44 = and i32 %43, 255
  %45 = load %struct.usb_device*, %struct.usb_device** %4, align 8
  %46 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = call i32 (i8*, i32, i8*, i8*, i8*, i32, i32, i32, i32, i32, ...) @snprintf(i8* %25, i32 %26, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0), i8* %28, i8* %30, i32 %33, i32 %36, i32 %38, i32 %40, i32 %42, i32 %44, i32 %47)
  br label %68

49:                                               ; preds = %3
  %50 = load i8*, i8** %5, align 8
  %51 = load i32, i32* %6, align 4
  %52 = load %struct.usb_device*, %struct.usb_device** %4, align 8
  %53 = call i8* @usb_get_manufacturer(%struct.usb_device* %52)
  %54 = load %struct.usb_device*, %struct.usb_device** %4, align 8
  %55 = call i8* @usb_get_product(%struct.usb_device* %54)
  %56 = load i32, i32* %9, align 4
  %57 = ashr i32 %56, 8
  %58 = load i32, i32* %9, align 4
  %59 = and i32 %58, 255
  %60 = load i32, i32* %8, align 4
  %61 = ashr i32 %60, 8
  %62 = load i32, i32* %8, align 4
  %63 = and i32 %62, 255
  %64 = load %struct.usb_device*, %struct.usb_device** %4, align 8
  %65 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %64, i32 0, i32 0
  %66 = load i32, i32* %65, align 4
  %67 = call i32 (i8*, i32, i8*, i8*, i8*, i32, i32, i32, i32, i32, ...) @snprintf(i8* %50, i32 %51, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.1, i64 0, i64 0), i8* %53, i8* %55, i32 %57, i32 %59, i32 %61, i32 %63, i32 %66)
  br label %68

68:                                               ; preds = %49, %24
  ret void
}

declare dso_local i32 @UGETW(i32) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*, i8*, i32, i32, i32, i32, i32, ...) #1

declare dso_local i8* @usb_get_manufacturer(%struct.usb_device*) #1

declare dso_local i8* @usb_get_product(%struct.usb_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
